{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 66,
  "lineage": "83ea4a97-bdbb-70fa-b6a9-5f75429bcaa0",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:security-group/sg-023a9cbcc5908971f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-023a9cbcc5908971f",
            "ingress": [],
            "name": "myapp-eks-cluster-cluster-2023090717114933650000000d",
            "name_prefix": "myapp-eks-cluster-cluster-",
            "owner_id": "956865410687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-cluster",
              "application": "myapp",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:security-group/sg-06be59d8d8a67e8f3",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06be59d8d8a67e8f3",
            "ingress": [],
            "name": "myapp-eks-cluster-node-2023090717114933710000000e",
            "name_prefix": "myapp-eks-cluster-node-",
            "owner_id": "956865410687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "myapp-eks-cluster-node",
              "application": "myapp",
              "environment": "development",
              "kubernetes.io/cluster/myapp-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-912254070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-023a9cbcc5908971f",
            "security_group_rule_id": "sgr-013d97f86374942f8",
            "self": false,
            "source_security_group_id": "sg-06be59d8d8a67e8f3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-239529051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-09e3a98400e750f60",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-609579109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-04612185718c8bfb8",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2057496980",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0c410f65c62017359",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3017838082",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-010cfb152eb03495d",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2696720931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0281f55d4e39342da",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3290268136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-042616e896c32c0a9",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1169202161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0695b70496c11a727",
            "self": false,
            "source_security_group_id": "sg-023a9cbcc5908971f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3803964553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0bf1bfe0dc9e77a66",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2869476239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0730200640469a20b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-257366112",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06be59d8d8a67e8f3",
            "security_group_rule_id": "sgr-0c5c96b42dd775a92",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.myapp-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:network-acl/acl-08022089413f8716b",
            "default_network_acl_id": "acl-08022089413f8716b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08022089413f8716b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "956865410687",
            "subnet_ids": [
              "subnet-009fbbf02f7d4399a",
              "subnet-0587cdf80f9b383b3",
              "subnet-076d16c63f60f52b7",
              "subnet-0dc447ce1f6c6195e",
              "subnet-0f0d509dfd96a57ce",
              "subnet-0fc0189c94b122c4f"
            ],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:route-table/rtb-062074ce0909b4ff0",
            "default_route_table_id": "rtb-062074ce0909b4ff0",
            "id": "rtb-062074ce0909b4ff0",
            "owner_id": "956865410687",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:security-group/sg-0880144779fe72051",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0880144779fe72051",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "956865410687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-default",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f94f725dd076ccd",
            "domain": "vpc",
            "id": "eipalloc-06f94f725dd076ccd",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-33-23.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.33.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myapp-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:internet-gateway/igw-04280b142877b09c1",
            "id": "igw-04280b142877b09c1",
            "owner_id": "956865410687",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f94f725dd076ccd",
            "association_id": "eipassoc-07dd66deba6ce3b0b",
            "connectivity_type": "public",
            "id": "nat-09fd10eaa554da3af",
            "network_interface_id": "eni-06181aaeee44bb85a",
            "private_ip": "10.0.4.99",
            "public_ip": "52.220.33.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f0d509dfd96a57ce",
            "tags": {
              "Name": "myapp-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee3463716cf3e6a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09fd10eaa554da3af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee3463716cf3e6a7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_eip.nat",
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_nat_gateway.this",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04280b142877b09c1",
            "id": "r-rtb-059629670bc55724f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-059629670bc55724f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_internet_gateway.this",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:route-table/rtb-0ee3463716cf3e6a7",
            "id": "rtb-0ee3463716cf3e6a7",
            "owner_id": "956865410687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-private",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:route-table/rtb-059629670bc55724f",
            "id": "rtb-059629670bc55724f",
            "owner_id": "956865410687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc-public",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f273debdbd04753",
            "route_table_id": "rtb-0ee3463716cf3e6a7",
            "subnet_id": "subnet-076d16c63f60f52b7"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adbcdcf6992efb86",
            "route_table_id": "rtb-0ee3463716cf3e6a7",
            "subnet_id": "subnet-009fbbf02f7d4399a"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f69d5eb5f2c9f747",
            "route_table_id": "rtb-0ee3463716cf3e6a7",
            "subnet_id": "subnet-0fc0189c94b122c4f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.private",
            "module.myapp-vpc.aws_subnet.private",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ffa9978eecff71e",
            "route_table_id": "rtb-059629670bc55724f",
            "subnet_id": "subnet-0f0d509dfd96a57ce"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3504d273b5fdf22",
            "route_table_id": "rtb-059629670bc55724f",
            "subnet_id": "subnet-0dc447ce1f6c6195e"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dfd2548a038d865",
            "route_table_id": "rtb-059629670bc55724f",
            "subnet_id": "subnet-0587cdf80f9b383b3"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_route_table.public",
            "module.myapp-vpc.aws_subnet.public",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-076d16c63f60f52b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076d16c63f60f52b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-009fbbf02f7d4399a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009fbbf02f7d4399a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-0fc0189c94b122c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc0189c94b122c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-0f0d509dfd96a57ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d509dfd96a57ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-0dc447ce1f6c6195e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc447ce1f6c6195e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:subnet/subnet-0587cdf80f9b383b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0587cdf80f9b383b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956865410687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myapp-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "myapp-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0feaf9f0b54a86a1f"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.myapp-vpc.aws_vpc.this",
            "module.myapp-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:956865410687:vpc/vpc-0feaf9f0b54a86a1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08022089413f8716b",
            "default_route_table_id": "rtb-062074ce0909b4ff0",
            "default_security_group_id": "sg-0880144779fe72051",
            "dhcp_options_id": "dopt-0d889c3502203ec93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0feaf9f0b54a86a1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062074ce0909b4ff0",
            "owner_id": "956865410687",
            "tags": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "myapp-vpc",
              "kubernetes.io/cluster/myapp-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}